--- a/Assignments/Assignment3.html
+++ b/Assignments/Assignment3.html
@@ -54,6 +54,22 @@
             if(num==rand) alert("Good Work :)");
             else alert("Not matched :(");
         }
+        function fifty(num1,num2)
+        {
+            if(num1==50||num2==50||num1+num2==50) alert("True");
+            else alert("False");
+        }
+        function posneg(num1,num2)
+        {
+            var sign1=Math.sign(num1);
+            var sign2=Math.sign(num2);
+            if(sign1==1) s1="Positive";
+            else s1="Negative"
+            if(sign2==1) s2="Positive";
+            else s2="Negative"
+            alert(num1+" sign is: "+s1+" and "+num2+" sign is: " +s2);
+
+        }
     </script>
 
 </head>
@@ -120,18 +136,7 @@
 
         <br>
         <br>
-        <h4>Q5)Write a JavaScript program to rotate the string 'w3resource' in right direction by periodically removing
-            one letter from the end of the string and attaching it to the front.</h4>
-        <h5><b>Solutuion: </b></h5>
-        <h4>TO-DO</h4>
-        <script>
-
-
-        </script>
-
-        <br>
-        <br>
-        <h4>Q6) Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.
+        <h4>Q5) Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.
         </h4>
         <h5><b>Solutuion: </b></h5>
         <input style="width: auto;" class="form-control" type="text" id="year" placeholder="Enter Year">
@@ -139,7 +144,7 @@
 
         <br>
         <br>
-        <h4>Q7)Write a JavaScript program to calculate multiplication and division of two numbers (input from user).
+        <h4>Q6)Write a JavaScript program to calculate multiplication and division of two numbers (input from user).
         </h4>
         <h5><b>Solutuion: </b></h5>
         <input style="width: auto;" class="form-control" type="text" id="num1" placeholder="Enter Num1">
@@ -149,7 +154,7 @@
 
         <br>
         <br>
-        <h4>Q8)Write a JavaScript program to calculate multiplication and division of two numbers (input from user).
+        <h4>Q7)Write a JavaScript program to calculate multiplication and division of two numbers (input from user).
         </h4>
         <h5><b>Solutuion: </b></h5>
         <input style="width: auto;" class="form-control" type="text" id="temp" placeholder="Enter Celsius/Farenheit">
@@ -159,12 +164,32 @@
 
         <br>
         <br>
-        <h4>Q9)Write a JavaScript program where the program takes a random integer between 1 to 10, the user is then prompted to input a guess number. If the user input matches with guess number, the program will display a message "Good Work" otherwise display a message "Not matched".
+        <h4>Q8)Write a JavaScript program where the program takes a random integer between 1 to 10, the user is then prompted to input a guess number. If the user input matches with guess number, the program will display a message "Good Work" otherwise display a message "Not matched".
         </h4>
         <h5><b>Solutuion: </b></h5>
         <input style="width: auto;" class="form-control" type="text" id="num" placeholder="Enter a Number from 1-10">
         <div style="margin-top: 1rem;"></div>
         <button class="btn btn-primary" onclick=" Guess(Number(num.value))">Check</button>
+
+        <br>
+        <br>
+        <h4>Q9)Write a JavaScript program to check two given numbers and return true if one of the number is 50 or if their sum is 50.
+        </h4>
+        <h5><b>Solutuion: </b></h5>
+        <input style="width: auto;" class="form-control" type="text" id="num11" placeholder="Enter a Number">
+        <input style="width: auto;" class="form-control" type="text" id="num22" placeholder="Enter another Number">
+        <div style="margin-top: 1rem;"></div>
+        <button class="btn btn-primary" onclick=" fifty(Number(num11.value),Number(num22.value))">Check</button>
+
+        <br>
+        <br>
+        <h4>Q10)Write a JavaScript program to check from two given integers, whether one is positive and another one is negative.
+        </h4>
+        <h5><b>Solutuion: </b></h5>
+        <input style="width: auto;" class="form-control" type="text" id="num111" placeholder="Enter a Number">
+        <input style="width: auto;" class="form-control" type="text" id="num222" placeholder="Enter another Number">
+        <div style="margin-top: 1rem;"></div>
+        <button class="btn btn-primary" onclick=" posneg(Number(num111.value),Number(num222.value))">Check</button>
     </div>
 
 
