--- a/Assignments/Assignment3.html
+++ b/Assignments/Assignment3.html
@@ -105,7 +105,7 @@
         <br>
         <h4>Q2) Write a JavaScript program to print the contents of the current window.</h4>
         <h5><b>Solutuion: </b></h5>
-        <input class="btn btn-default" type="button" onclick="window.print();" value="Print Page Contents">
+        <input class="btn btn-primary" type="button" onclick="window.print();" value="Print Page Contents">
 
         <br>
         <br>
