--- a/Assignments/Assignment4/index.html
+++ b/Assignments/Assignment4/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-----------------------------------
+     Copyright(C): Lokesh B M - Brillio  
+    ------------------------------------->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +43,7 @@
                     <input class="btn btn-success" type="button" value="Register Now" id="reg-btn">
                 </form>
             </div>
-            <div class="signin-atag" >Already have an account? <a href="#"><u>Sign in</u></a> </div>
+            <div class="signin-atag">Already have an account? <a href="#"><u>Sign in</u></a> </div>
         </div>
     </center>
 
